# hackmyvm-commandlineinterface

./: .gitignore  pyproject.toml  readme.md  requirements.txt  run_hmv.py
hmv/: __init__.py  constants.py  main.py
hmv/modules/: __init__.py  auth.py  download.py  flag.py  scraper.py  writeups.py
